app-ts/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-mesh 
  labels:
    name: app-mesh
    # ativar o sidecar do istio automatico nesta namespace
    istio-injection: enabled
