app-ts/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-service-mesh-routes
  namespace: app-mesh
spec:
  # nome do service usado no service.yaml
  hosts:
    - app-service-mesh-svc # Nome do service para mais que um serviço usar: "*"
  http:
    # - fault:
    #     delay:
    #       fixedDelay: 1s
    #       percentage: 
    #         value: 5
    #     # abort:
    #     #   httpStatus: 504
    #     #   percentage:
    #     #     value: 50
    #   route:
    #     - destination:
    #         host: app-service-mesh-svc.app-mesh.svc.cluster.local 
    #         subset: v1
    # Exemplo de retry e timeout
    #   retries:
    #     attempts: 3
    #     perTryTimeout: 1s
    #   timeout: 0.2s
    # Exemplo de redirecionamento de rota
    # configuracao de roteamento para versoes diferentes
    # - name: "app-service-mesh-v2"
    #   match:
    #   - uri:
    #       prefix: "/teste"
    #   rewrite:
    #     uri: "/healthz"
    #   route:
    #   - destination:
    #       host: app-service-mesh-svc.app-mesh.svc.cluster.local
    #       subset: v2
    # - name: "app-service-mesh-v1"
    #   route:
    #   - destination:
    #       host: app-service-mesh-svc.app-mesh.svc.cluster.local
    #       subset: v1
    
    # Exemplo de balanceamento de carga entre versões - canary deployment
    - name: "app-service-mesh-v1"
      match:
      - queryParams:
          testeab:
            exact: "true"
    # para rodar o teste da linha acima, use a URL: http://<service-url>/?teste=algumvalor
    # exemplo kubectl run -it fortio -n app-mesh --rm --image=fortio/fortio -- load -qps 500 -t 60s -c 1 "http://app-service-mesh-svc/healthz?testeab=true"
      route:
      - destination:
          host: app-service-mesh-svc.app-mesh.svc.cluster.local
          subset: v1
        # weight: 50  
    - name: "app-service-mesh-v2"
      route:
        - destination:
            host: app-service-mesh-svc.app-mesh.svc.cluster.local
            subset: v2
          # weight: 50
